--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   responsive_builder: ^0.4.2
+  provider: ^6.0.2
+  firebase_core: ^1.15.0
 
 dev_dependencies:
   flutter_test:
