--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   responsive_builder: ^0.4.2
   provider: ^6.0.2
   firebase_core: ^1.15.0
+  firebase_auth: ^3.3.16
+  cloud_firestore: ^3.1.13
+  cloud_functions: ^3.2.13
 
 dev_dependencies:
   flutter_test:
