--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^3.3.16
   cloud_firestore: ^3.1.13
   cloud_functions: ^3.2.13
+  flutter_local_notifications: ^9.5.3+1
+  flutter_native_timezone: ^2.0.0
 
 dev_dependencies:
   flutter_test:
