--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_functions: ^3.2.13
   flutter_local_notifications: ^9.5.3+1
   flutter_native_timezone: ^2.0.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
